updated index.html with basic structure

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Directive by HTML5 UP</title>
+		<title>Art^2</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,47 +16,37 @@
 		<!-- Header -->
 			<div id="header">
 				<span class="logo icon fa-paper-plane"></span>
-				<h1>Hi. This is Directive.</h1>
-				<p>A responsive HTML5 + CSS3 site template designed by <a href="http://html5up.net">HTML5 UP</a>
-				<br />
-				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				<h1>Art^2</h1>
+				<p>Learn art and build your community one pixel at a time.</p>
 			</div>
 
 		<!-- Main -->
 			<div id="main">
 
 				<header class="major container medium">
-					<h2>We conduct experiments that
-					<br />
-					may or may not seriously
-					<br />
-					break the universe</h2>
-					<!--
-					<p>Tellus erat mauris ipsum fermentum<br />
-					etiam vivamus nunc nibh morbi.</p>
-					-->
+					<h2>Let's walk through the process</h2>
 				</header>
 
 				<div class="box alt container">
 					<section class="feature left">
 						<a href="#" class="image icon solid fa-signal"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The First Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Needfinding</h3>
+							<p>*Insert Description* View our: <a href="https://docs.google.com/presentation/d/1IAPAGbgUgrdDdLvyIs-bS2qq2jEO0qguB6KZNnr2-1E/edit?usp=sharing">slides</a>.</p>
 						</div>
 					</section>
 					<section class="feature right">
 						<a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Second Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Additional Needfinding, POVs, HMWs, Brainstorming & Experience Prototypes</h3>
+							<p>*Insert Description* View our: <a href="https://docs.google.com/presentation/d/1wcRLL5-01qvqQEQpZMeZdJlH-Qc0AsOBSo4qCe6e9Rk/edit?usp=sharing">slides</a>.</p>
 						</div>
 					</section>
 					<section class="feature left">
 						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Third Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3></h3>
+							<p>*Insert Description* View our: <a href="https://docs.google.com/presentation/d/1_uDkgCyrQGoPw6XdHMYdjnqyvTRVCipoHHMfYCtdCMo/edit?usp=sharing">slides</a>.</p>
 						</div>
 					</section>
 				</div>
