--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,7 @@
 	<title>Art^2</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="icon" type="image/x-icon" href="./images/Logo.png">
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
@@ -17,7 +18,7 @@
 
 	<!-- Header -->
 	<div id="header">
-		<h1>Art^2</h1>
+		<img id="logo" style="padding: 0px 0px; width: 5%" src="images/Logo.png"/><br />
 		<span>"Learn art and build your community <br />
 			- One pixel at a time."</span><br /><br /><br />
 		<button style="padding: 5px 10px; color: black; border: 2px solid gray; border-radius: 10px; margin: 10px"
