placeholder website final deliverable stuff

--- a/website/index.html
+++ b/website/index.html
@@ -18,7 +18,7 @@
 
 	<!-- Header -->
 	<div id="header">
-		<img id="logo" style="padding: 0px 0px; width: 5%" src="images/Logo.png"/><br />
+		<img id="logo" style="padding: 0px 0px; width: 5%" src="images/Logo.png" /><br />
 		<span>"Learn art and build your community <br />
 			- One pixel at a time."</span><br /><br /><br />
 		<button style="padding: 5px 10px; color: black; border: 2px solid gray; border-radius: 10px; margin: 10px"
@@ -81,15 +81,6 @@
 				</div>
 			</section>
 			<section class="feature left" style="height:auto">
-				<img style="padding: 30px 0px" class="image" src="images/heuristics.png"
-					alt="Usability heuristics chart" />
-				<div class="content">
-					<h3>Heuristic Evaluation Synthesis</h3>
-					<p>View our: <a href="files/Assignment 9.pdf">report</a>
-					</p>
-				</div>
-			</section>
-			<section class="feature right" style="height:auto">
 				<div class="image">
 					<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%%" height="900"
 						src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FTwUsLeVFWRp8SHAPxEngMF%2Fart%255E2%3Ftype%3Ddesign%26node-id%3D6-220%26t%3DDh7hxxPHvQ4ff6GV-1%26scaling%3Dmin-zoom%26page-id%3D0%253A1%26starting-point-node-id%3D6%253A220%26mode%3Ddesign"
@@ -105,6 +96,33 @@
 						<br />
 						<a href="files/README.pdf">
 							README</a>
+					</p>
+				</div>
+			</section>
+			<section class="feature right" style="height:auto">
+				<img style="padding: 30px 0px" class="image" src="images/heuristics.png"
+					alt="Usability heuristics chart" />
+				<div class="content">
+					<h3>Heuristic Evaluation Synthesis</h3>
+					<p>View our: <a href="files/Assignment 9.pdf">report</a>
+					</p>
+				</div>
+			</section>
+			<section class="feature left" style="height:auto">
+				<img style="padding: 30px 0px" class="image" src="" alt="demo video" />
+				<div class="content">
+					<h3>Poster, Pitch & Demo Video</h3>
+					<p>View our: <a href="files/Assignment 9.pdf">slide</a>
+					<p>View our: <a href="files/Assignment 9.pdf">script</a>
+					<p>View our: <a href="files/Assignment 9.pdf">poster</a>
+					</p>
+				</div>
+			</section>
+			<section class="feature right" style="height:auto">
+				<img style="padding: 30px 0px" class="image" src="" alt="poster" />
+				<div class="content">
+					<h3>Final Report </h3>
+					<p>View our: <a href="files/Assignment 9.pdf">report</a>
 					</p>
 				</div>
 			</section>
