--- a/website/index.html
+++ b/website/index.html
@@ -56,10 +56,10 @@
 				<p> View our: <br />
 					<a href="files/Assignment 8.pdf">slides</a> 
 					<a href="files/Assignment 8.pptx">(PPT)</a> <br/>
-					<a href="files/Assignment 4.pdf">app</a> <br/>
-					<a href="files/Assignment 4.pptx">README</a>
+					app (<a href="exp://u.expo.dev/update/426dd384-7abe-401a-b40c-3c13677411d4">iOS</a>/<a href="exp://u.expo.dev/update/423909f8-bba6-4bad-8a34-506232548b97">Android</a>)<br/>
+					<a href="files/READ ME.pdf">README</a>
 					<br />
-					<a href="https://www.youtube.com/watch?v=kgT3nzMHrsY">Demo Video</a>
+					<a href="https://www.youtube.com/watch?v=5axT3egx8_Y&feature=youtu.be">Demo Video</a>
 					<a href="files/Art^2 Concept Video.mp4" download>(download)</a>
 				</p>
 			</div>
